--- a/config/locales/devise.zh.yml
+++ b/config/locales/devise.zh.yml
@@ -14,7 +14,7 @@ zh:
       last_attempt: "You have one more attempt before your account is locked."
       not_found_in_database: "Invalid %{authentication_keys} or password."
       timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
+      unauthenticated: "你需要登录或者注册后才可以访问"
       unconfirmed: "You have to confirm your email address before continuing."
     mailer:
       confirmation_instructions:
@@ -42,7 +42,7 @@ zh:
       updated: "Your account has been updated successfully."
     sessions:
       signed_in: "登录成功"
-      signed_out: "Signed out successfully."
+      signed_out: "登出成功"
       already_signed_out: "Signed out successfully."
     unlocks:
       send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
