--- a/config/locales/devise.zh-CN.yml
+++ b/config/locales/devise.zh-CN.yml
@@ -12,7 +12,7 @@ zh-CN:
       invalid: "用户名或密码不正确"
       locked: "Your account is locked."
       last_attempt: "You have one more attempt before your account is locked."
-      not_found_in_database: "Invalid %{authentication_keys} or password."
+      not_found_in_database: "用户名或密码不正确"
       timeout: "Your session expired. Please sign in again to continue."
       unauthenticated: "你需要登录或者注册后才可以访问"
       unconfirmed: "You have to confirm your email address before continuing."
