--- a/config/locales/simple_form.zh-CN.yml
+++ b/config/locales/simple_form.zh-CN.yml
@@ -15,7 +15,7 @@ zh-CN:
       paper:
         name: "考试标题"
         content: "考试内容"
-        course: "考试科目"
+        course_id: "考试科目"
         start_at: "开始时间"
         end_at: "结束时间"
     #   defaults:
